--- a/iLQG/ilqr_pen_on_cart_autograd.ipynb
+++ b/iLQG/ilqr_pen_on_cart_autograd.ipynb
@@ -97,7 +97,8 @@
     "\n",
     "print(C)\n",
     "\n",
-    "print(x.matmul(x))"
+    "print(x.matmul(x))\n",
+    "print(\"test me\")"
    ]
   },
   {
